<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>SokkerViewer</groupId>
	<artifactId>SokkerViewer</artifactId>
	<name>SokkerViewer</name>
	<version>0.15.0</version>
	<properties>
		<swt.version>3.130.0</swt.version>
		<swt.os-specific-dep>org.eclipse.swt.win32.win32.x86_64</swt.os-specific-dep>
	</properties>
	<repositories>
		<repository>
			<id>central</id>
			<name>Maven Central</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
		<repository>
			<id>terrestris</id>
			<url>https://nexus.terrestris.de/repository/public/</url>
		</repository>
		<repository>
			<id>htmlentities-repo</id>
			<url>https://sic.ctti.extranet.gencat.cat/nexus/repository/public/</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
		  <groupId>org.eclipse.platform</groupId>
		  <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
		  <version>3.130.0</version>
		</dependency>
		<dependency>
			<groupId>hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>1.8.1.1</version>
		</dependency>
		<dependency>
			<groupId>com.lowagie</groupId>
			<artifactId>itext</artifactId>
			<version>1.4.8</version>
		</dependency>
		<dependency>
			<groupId>jfree</groupId>
			<artifactId>jcommon</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>jfree</groupId>
			<artifactId>jfreechart</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<groupId>com.tecnick.htmlutils</groupId>
			<artifactId>htmlentities</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	<profiles>
		<profile>
			<id>unix</id>
			<activation>
				<os>
					<family>unix</family>
				</os>
			</activation>
			<properties>
				<swt.os-specific-dep>swt-linux-gtk
				</swt.os-specific-dep>
				<sv.os.type name="os.name.value">linux</sv.os.type>
			</properties>
		</profile>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<properties>
				<swt.os-specific-dep>org.eclipse.swt.win32.win32.x86_64</swt.os-specific-dep>
				<sv.os.type name="os.name.value">windows</sv.os.type>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<family>macosx</family>
				</os>
			</activation>
			<properties>
				<swt.os-specific-dep>swt-macosx</swt.os-specific-dep>
				<sv.os.type name="os.name.value">mac</sv.os.type>
			</properties>
		</profile>
		<profile>
			<id>unix-x86_64</id>
			<properties>
				<swt.os-specific-dep>swt-linux-gtk-x86_64
				</swt.os-specific-dep>
				<sv.os.type name="os.name.value">linux-x86_64</sv.os.type>
			</properties>
		</profile>
		<profile>
			<id>windows-x86_64</id>
			<properties>
				<swt.os-specific-dep>org.eclipse.swt.win32.win32.x86_64</swt.os-specific-dep>
				<sv.os.type name="os.name.value">windows-x86_64</sv.os.type>
			</properties>
		</profile>
		<profile>
			<id>macosx-x86_64</id>
			<properties>
				<swt.os-specific-dep>swt-macosx-x86_64</swt.os-specific-dep>
				<sv.os.type name="os.name.value">mac-x86_64</sv.os.type>
			</properties>
		</profile>
		<profile>
			<!--
				Ready to run bundle for Windows x64: the application, a trimmed Java runtime
				and SokkerViewer.exe, so nothing has to be installed.

				mvn -Pbundle clean verify
				-> packages/release/stable/windows/sokker-${project.version}-win64-with-java.zip

				Needs a JDK (not a JRE) as JAVA_HOME, because it runs jlink.
				The normal build is not affected by this profile.
			-->
			<id>bundle</id>
			<properties>
				<bundle.dir>${basedir}/packages/bundle/SokkerViewer</bundle.dir>
				<!-- the languages SokkerViewer is translated into, see src/main/resources/lang -->
				<bundle.locales>en,bg,cs,da,de,el,es,et,fr,hu,it,pl,pt,ro,ru,tr,zh</bundle.locales>
			</properties>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-antrun-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>bundle-runtime</id>
								<phase>prepare-package</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<delete dir="${bundle.dir}" />
										<mkdir dir="${bundle.dir}" />
										<copy todir="${bundle.dir}">
											<fileset dir="${basedir}/packages/windows/sokker" />
										</copy>
										<!-- cour.ttf is Microsoft's Courier New and may not be redistributed -->
										<delete file="${bundle.dir}/fonts/cour.ttf" />
										<exec executable="${java.home}/bin/jlink" failonerror="true">
											<arg value="--add-modules" />
											<arg value="java.base,java.desktop,java.naming,java.sql,jdk.charsets,jdk.crypto.ec,jdk.localedata" />
											<arg value="--include-locales=${bundle.locales}" />
											<arg value="--strip-debug" />
											<arg value="--no-header-files" />
											<arg value="--no-man-pages" />
											<arg value="--compress=zip-6" />
											<arg value="--output" />
											<arg value="${bundle.dir}/runtime" />
										</exec>
									</tasks>
								</configuration>
							</execution>
							<execution>
								<id>bundle-zip</id>
								<phase>verify</phase>
								<goals>
									<goal>run</goal>
								</goals>
								<configuration>
									<tasks>
										<zip
											destfile="${basedir}/packages/release/stable/windows/sokker-${project.version}-win64-with-java.zip">
											<zipfileset dir="${bundle.dir}" prefix="SokkerViewer"
												excludes="SokkerViewer.exe" />
											<zipfileset dir="${bundle.dir}" prefix="SokkerViewer"
												includes="SokkerViewer.exe" filemode="755" />
										</zip>
									</tasks>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>com.akathist.maven.plugins.launch4j</groupId>
						<artifactId>launch4j-maven-plugin</artifactId>
						<version>2.5.2</version>
						<executions>
							<execution>
								<id>bundle-exe</id>
								<phase>package</phase>
								<goals>
									<goal>launch4j</goal>
								</goals>
								<configuration>
									<headerType>gui</headerType>
									<!-- the jar stays a normal file next to the exe, it is not wrapped -->
									<dontWrapJar>true</dontWrapJar>
									<jar>Launcher.jar</jar>
									<outfile>${bundle.dir}/SokkerViewer.exe</outfile>
									<icon>${basedir}/src/main/resources/images/installSokkerViewer.ico</icon>
									<!-- SokkerViewer keeps its data next to the exe, so start there -->
									<chdir>.</chdir>
									<jre>
										<path>runtime</path>
										<requiresJdk>false</requiresJdk>
									</jre>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				  <version>3.11.0</version>
				  <configuration>
					<source>8</source>
					<target>8</target>
				  </configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>target</outputDirectory>
							<includeScope>compile</includeScope>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.1</version>
				<executions>
					<execution>
						<id>buildSV</id>
						<phase>compile</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<tasks>
								<ant inheritRefs="true" antfile="${basedir}/build.xml">
									<property value="${sv.os.type}" name="os.name.value" />
									<property name="lib.src.dir" value="target/" />
									<property name="swt"
										value="${swt.os-specific-dep}-${swt.version}.jar" />
									<target name="post_clean" />
								</ant>
							</tasks>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>